started adding data generation cells

--- a/src/presentation.ipynb
+++ b/src/presentation.ipynb
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -555,19 +555,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ".\r\n",
-      "\r\n",
-      "======================== 23 tests deselected =========================\r\n",
-      "\r\n",
-      "1 passed, 23 deselected in 0.17 seconds\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!sh pytest_run.sh test_round_and_around"
    ]
@@ -592,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -601,19 +589,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ".\r\n",
-      "\r\n",
-      "======================== 23 tests deselected =========================\r\n",
-      "\r\n",
-      "1 passed, 23 deselected in 0.13 seconds\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!sh pytest_run.sh test_different_paths_same_destination_add"
    ]
@@ -642,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -651,19 +627,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "..\r\n",
-      "\r\n",
-      "======================== 22 tests deselected =========================\r\n",
-      "\r\n",
-      "2 passed, 22 deselected in 0.20 seconds\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!sh pytest_run.sh test_there_and_back_again"
    ]
@@ -692,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -701,19 +665,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ".\r\n",
-      "\r\n",
-      "======================== 23 tests deselected =========================\r\n",
-      "\r\n",
-      "1 passed, 23 deselected in 0.17 seconds\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!sh pytest_run.sh test_some_things_never_change"
    ]
@@ -738,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -747,19 +699,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ".\r\n",
-      "\r\n",
-      "======================== 23 tests deselected =========================\r\n",
-      "\r\n",
-      "1 passed, 23 deselected in 0.15 seconds\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!sh pytest_run.sh test_the_more_things_change_the_more_they_stay_the_same"
    ]
@@ -816,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -825,19 +765,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ".\r\n",
-      "\r\n",
-      "======================== 23 tests deselected =========================\r\n",
-      "\r\n",
-      "1 passed, 23 deselected in 0.08 seconds\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!sh pytest_run.sh test_two_heads_are_better_than_one"
    ]
@@ -866,6 +794,163 @@
    },
    "source": [
     "## Data generation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-33"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from hypothesis import strategies as st\n",
+    "\n",
+    "st.integers().example()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\x0f'"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "st.text().example()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-3.8699796780959596e+18"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "st.floats().example()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-6987339785711051334, -164, 72, -40547]"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "st.lists(st.integers()).example()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.6836547869876369"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nodes = st.floats() | st.booleans() | st.text() | st.none()\n",
+    "children = lambda x: st.lists(x) | st.dictionaries(st.text(), x)\n",
+    "st.recursive(nodes, children).example()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "@st.composite\n",
+    "def composite_strategy(draw):\n",
+    "    pass"
    ]
   },
   {
@@ -939,7 +1024,7 @@
    },
    "outputs": [],
    "source": [
-    "operations = 'new', 'put', 'get', 'set'\n",
+    "operations = 'new', 'put', 'get', 'size'\n",
     "\n",
     "import itertools\n",
     "\n",
@@ -1289,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1369,7 +1454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1399,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false,
     "deletable": true,
