--- a/src/presentation.ipynb
+++ b/src/presentation.ipynb
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -807,18 +807,7 @@
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-33"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from hypothesis import strategies as st\n",
     "\n",
@@ -827,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -836,25 +825,14 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\x0f'"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "st.text().example()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -863,25 +841,14 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-3.8699796780959596e+18"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "st.floats().example()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -890,25 +857,14 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[-6987339785711051334, -164, 72, -40547]"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "st.lists(st.integers()).example()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -917,18 +873,7 @@
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-0.6836547869876369"
-      ]
-     },
-     "execution_count": 115,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "nodes = st.floats() | st.booleans() | st.text() | st.none()\n",
     "children = lambda x: st.lists(x) | st.dictionaries(st.text(), x)\n",
@@ -1168,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1177,7 +1122,48 @@
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F\r\n",
+      "\r\n",
+      "============================== FAILURES ==============================\r\n",
+      "\r\n",
+      "\r\n",
+      "_____________________ test_model_based_1.runTest _____________________\r\n",
+      "\r\n",
+      "\r\n",
+      ".venv/hypothesis/stateful.py:182: in runTest\r\n",
+      "    run_state_machine_as_test(state_machine_class)\r\n",
+      "\r\n",
+      ".venv/hypothesis/stateful.py:109: in run_state_machine_as_test\r\n",
+      "    breaker.run(state_machine_factory(), print_steps=True)\r\n",
+      "\r\n",
+      ".venv/hypothesis/stateful.py:237: in run\r\n",
+      "    state_machine.execute_step(value)\r\n",
+      "\r\n",
+      ".venv/hypothesis/stateful.py:512: in execute_step\r\n",
+      "    result = rule.function(self, **data)\r\n",
+      "\r\n",
+      "test_4_model_based_testing.py:131: in get\r\n",
+      "    assert actual == model\r\n",
+      "E   AssertionError: assert 0 == 1\r\n",
+      "\r\n",
+      "----------------------------- Hypothesis -----------------------------\r\n",
+      "\r\n",
+      "Step #1: new(max_size=2)\r\n",
+      "Step #2: put(item=0)\r\n",
+      "Step #3: put(item=1)\r\n",
+      "Step #4: get()\r\n",
+      "\r\n",
+      "======================== 23 tests deselected =========================\r\n",
+      "\r\n",
+      "1 failed, 23 deselected in 0.17 seconds\r\n"
+     ]
+    }
+   ],
    "source": [
     "test_model_based_1 = QueueMachine.TestCase\n",
     "!sh pytest_run.sh test_model_based_1"
@@ -1243,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1252,7 +1238,48 @@
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F\r\n",
+      "\r\n",
+      "============================== FAILURES ==============================\r\n",
+      "\r\n",
+      "\r\n",
+      "_____________________ test_model_based_2.runTest _____________________\r\n",
+      "\r\n",
+      "\r\n",
+      ".venv/hypothesis/stateful.py:182: in runTest\r\n",
+      "    run_state_machine_as_test(state_machine_class)\r\n",
+      "\r\n",
+      ".venv/hypothesis/stateful.py:109: in run_state_machine_as_test\r\n",
+      "    breaker.run(state_machine_factory(), print_steps=True)\r\n",
+      "\r\n",
+      ".venv/hypothesis/stateful.py:237: in run\r\n",
+      "    state_machine.execute_step(value)\r\n",
+      "\r\n",
+      ".venv/hypothesis/stateful.py:512: in execute_step\r\n",
+      "    result = rule.function(self, **data)\r\n",
+      "\r\n",
+      "test_4_model_based_testing.py:137: in size\r\n",
+      "    assert actual == model\r\n",
+      "E   AssertionError: assert 0 == 2\r\n",
+      "\r\n",
+      "----------------------------- Hypothesis -----------------------------\r\n",
+      "\r\n",
+      "Step #1: new(max_size=1)\r\n",
+      "Step #2: put(item=0)\r\n",
+      "Step #3: put(item=0)\r\n",
+      "Step #4: size()\r\n",
+      "\r\n",
+      "======================== 23 tests deselected =========================\r\n",
+      "\r\n",
+      "1 failed, 23 deselected in 0.17 seconds\r\n"
+     ]
+    }
+   ],
    "source": [
     "test_model_based_2 = QueueMachine2.TestCase\n",
     "!sh pytest_run.sh test_model_based_2"
@@ -1319,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1328,7 +1355,47 @@
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F\r\n",
+      "\r\n",
+      "============================== FAILURES ==============================\r\n",
+      "\r\n",
+      "\r\n",
+      "_____________________ test_model_based_3.runTest _____________________\r\n",
+      "\r\n",
+      "\r\n",
+      ".venv/hypothesis/stateful.py:182: in runTest\r\n",
+      "    run_state_machine_as_test(state_machine_class)\r\n",
+      "\r\n",
+      ".venv/hypothesis/stateful.py:109: in run_state_machine_as_test\r\n",
+      "    breaker.run(state_machine_factory(), print_steps=True)\r\n",
+      "\r\n",
+      ".venv/hypothesis/stateful.py:237: in run\r\n",
+      "    state_machine.execute_step(value)\r\n",
+      "\r\n",
+      ".venv/hypothesis/stateful.py:512: in execute_step\r\n",
+      "    result = rule.function(self, **data)\r\n",
+      "\r\n",
+      "test_4_model_based_testing.py:137: in size\r\n",
+      "    assert actual == model\r\n",
+      "E   AssertionError: assert 0 == 1\r\n",
+      "\r\n",
+      "----------------------------- Hypothesis -----------------------------\r\n",
+      "\r\n",
+      "Step #1: new(max_size=1)\r\n",
+      "Step #2: put(item=0)\r\n",
+      "Step #3: size()\r\n",
+      "\r\n",
+      "======================== 23 tests deselected =========================\r\n",
+      "\r\n",
+      "1 failed, 23 deselected in 0.15 seconds\r\n"
+     ]
+    }
+   ],
    "source": [
     "test_model_based_3 = QueueMachine3.TestCase\n",
     "!sh pytest_run.sh test_model_based_3"
@@ -1374,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1383,7 +1450,19 @@
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".\r\n",
+      "\r\n",
+      "======================== 23 tests deselected =========================\r\n",
+      "\r\n",
+      "1 passed, 23 deselected in 0.28 seconds\r\n"
+     ]
+    }
+   ],
    "source": [
     "test_model_based_4 = QueueMachine4.TestCase\n",
     "!sh pytest_run.sh test_model_based_4"
@@ -1497,8 +1576,8 @@
     {
      "data": {
       "text/html": [
-       "<link href=\"https://fonts.googleapis.com/css?family=Poppins\" rel=\"stylesheet\">\n",
-       "<style>body { font-family: 'Poppins', serif !important; }</style>"
+       "<link href=\"https://fonts.googleapis.com/css?family=ABeeZee\" rel=\"stylesheet\">\n",
+       "<style>body { font-family: 'ABeeZee', serif !important; }</style>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -1510,8 +1589,8 @@
    ],
    "source": [
     "%%HTML\n",
-    "<link href=\"https://fonts.googleapis.com/css?family=Poppins\" rel=\"stylesheet\">\n",
-    "<style>body { font-family: 'Poppins', serif !important; }</style>"
+    "<link href=\"https://fonts.googleapis.com/css?family=ABeeZee\" rel=\"stylesheet\">\n",
+    "<style>body { font-family: 'ABeeZee', serif !important; }</style>"
    ]
   }
  ],
