started changing rle encode / decode to contain an error which demonstrates shrinking

--- a/src/presentation.ipynb
+++ b/src/presentation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true,
     "slideshow": {
@@ -165,14 +165,14 @@
     "            count += 1\n",
     "    else:\n",
     "        lst.append((character, count))\n",
-    "    return lst"
+    "    return ''.join(x + str(n) for x, n in lst)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true,
     "slideshow": {
@@ -211,14 +211,26 @@
    "outputs": [],
    "source": [
     "def decode(lst):\n",
-    "    return ''.join(c * n for c, n in lst)"
+    "    curr_digits = ''\n",
+    "    curr_letter = ''\n",
+    "    output = ''\n",
+    "    for c in lst:\n",
+    "        if c.isdigit():\n",
+    "            curr_digits += c\n",
+    "        else:\n",
+    "            if curr_digits:\n",
+    "                output += curr_letter * int(curr_digits)\n",
+    "            curr_letter = c\n",
+    "            curr_digits = ''\n",
+    "    output += curr_letter * int(curr_digits)\n",
+    "    return output"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true,
     "slideshow": {
@@ -227,7 +239,7 @@
    },
    "outputs": [],
    "source": [
-    "decode([('h', 1), ('e', 1), ('l', 2), ('o', 1)])"
+    "decode('h1e1l2o1')"
    ]
   },
   {
@@ -257,8 +269,8 @@
    "outputs": [],
    "source": [
     "def test_run_length_encode():\n",
-    "    input_data = \"hello\"\n",
-    "    expected = [('h', 1), ('e', 1), ('l', 2), ('o', 1)]\n",
+    "    input_data = 'hello'\n",
+    "    expected = 'h1e1l2o1'\n",
     "    actual = encode(input_data)\n",
     "    assert actual == expected"
    ]
@@ -267,7 +279,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true,
     "slideshow": {
@@ -293,8 +305,8 @@
    "outputs": [],
    "source": [
     "def test_run_length_decode():\n",
-    "    input_data = [('h', 1), ('e', 1), ('l', 2), ('o', 1)]\n",
-    "    expected = \"hello\"\n",
+    "    input_data = 'h1e1l2o1'\n",
+    "    expected = 'hello'\n",
     "    actual = decode(input_data)\n",
     "    assert actual == expected"
    ]
@@ -303,7 +315,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true,
     "slideshow": {
@@ -341,7 +353,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true,
     "slideshow": {
@@ -384,7 +396,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true,
     "slideshow": {
@@ -409,8 +421,7 @@
    },
    "outputs": [],
    "source": [
-    "from hypothesis import strategies as st\n",
-    "from hypothesis import given\n",
+    "from hypothesis import strategies as st, given, assume\n",
     "\n",
     "@given(st.text())\n",
     "def test_property_based_run_length_encode_decode(input_data):\n",
@@ -421,7 +432,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true,
     "slideshow": {
@@ -461,7 +472,7 @@
     "            count += 1\n",
     "    else:\n",
     "        lst.append((character, count))\n",
-    "    return lst"
+    "    return ''.join(x + str(n) for x, n in lst)"
    ]
   },
   {
@@ -479,12 +490,13 @@
    "source": [
     "@given(st.text())\n",
     "def test_property_based_run_length_encode_decode_fixed(input_data):\n",
+    "    print(input_data)\n",
     "    assert decode(encode_fixed(input_data)) == input_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -493,7 +505,109 @@
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F\r\n",
+      "\r\n",
+      "============================== FAILURES ==============================\r\n",
+      "\r\n",
+      "\r\n",
+      "_________ test_property_based_run_length_encode_decode_fixed _________\r\n",
+      "\r\n",
+      "\r\n",
+      "test_1_introduction.py:291: in test_property_based_run_length_encode_decode_fixed\r\n",
+      "    def test_property_based_run_length_encode_decode_fixed(input_data):\r\n",
+      "\r\n",
+      ".venv/hypothesis/core.py:524: in wrapped_test\r\n",
+      "    print_example=True, is_final=True\r\n",
+      "\r\n",
+      ".venv/hypothesis/executors.py:58: in default_new_style_executor\r\n",
+      "    return function(data)\r\n",
+      "\r\n",
+      ".venv/hypothesis/core.py:111: in run\r\n",
+      "    return test(*args, **kwargs)\r\n",
+      "\r\n",
+      "test_1_introduction.py:293: in test_property_based_run_length_encode_decode_fixed\r\n",
+      "    assert decode(encode_fixed(input_data)) == input_data\r\n",
+      "E   AssertionError: assert '' == '0'\r\n",
+      "E     + 0\r\n",
+      "\r\n",
+      "------------------------ Captured stdout call ------------------------\r\n",
+      "\r\n",
+      "\r\n",
+      "㛼\r\n",
+      "춯l\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "᫞6򥄏򪜹鳻眤򼱢􍒊\u0016\r\n",
+      "᫞6򥄏򪜹鳻眤򼱢􍒊\u0016\r\n",
+      "᫞6𑋏𐣌𐢦\r\n",
+      "᫞𑋏𐣌𐢦\r\n",
+      "\r\n",
+      "𑋏𐣌𐢦\r\n",
+      "𐠰\r\n",
+      "𐠰\r\n",
+      "᫞6𑋏򰤰\r\n",
+      "\r\n",
+      "6𑋏򰤰\r\n",
+      "6\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "2\r\n",
+      "0\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "\r\n",
+      "0\r\n",
+      "\r\n",
+      "----------------------------- Hypothesis -----------------------------\r\n",
+      "\r\n",
+      "Falsifying example: test_property_based_run_length_encode_decode_fixed(input_data='0')\r\n",
+      "\r\n",
+      "======================== 23 tests deselected =========================\r\n",
+      "\r\n",
+      "1 failed, 23 deselected in 0.91 seconds\r\n"
+     ]
+    }
+   ],
    "source": [
     "!sh pytest_run.sh test_property_based_run_length_encode_decode_fixed"
    ]
@@ -548,7 +662,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true,
     "slideshow": {
@@ -582,7 +696,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true,
     "slideshow": {
@@ -620,7 +734,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true,
     "slideshow": {
@@ -658,7 +772,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true,
     "slideshow": {
@@ -692,7 +806,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true,
     "slideshow": {
@@ -725,7 +839,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true,
     "slideshow": {
@@ -758,7 +872,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true,
     "slideshow": {
@@ -800,7 +914,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true,
     "slideshow": {
@@ -818,7 +932,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true,
     "slideshow": {
@@ -834,7 +948,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true,
     "slideshow": {
@@ -850,7 +964,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true,
     "slideshow": {
@@ -866,7 +980,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true,
     "slideshow": {
@@ -960,7 +1074,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true,
     "slideshow": {
@@ -969,10 +1083,8 @@
    },
    "outputs": [],
    "source": [
-    "operations = 'new', 'put', 'get', 'size'\n",
-    "\n",
     "import itertools\n",
-    "\n",
+    "operations = 'new', 'put', 'get', 'size'\n",
     "list(itertools.permutations(operations))"
    ]
   },
@@ -993,7 +1105,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true,
     "slideshow": {
@@ -1113,57 +1225,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "F\r\n",
-      "\r\n",
-      "============================== FAILURES ==============================\r\n",
-      "\r\n",
-      "\r\n",
-      "_____________________ test_model_based_1.runTest _____________________\r\n",
-      "\r\n",
-      "\r\n",
-      ".venv/hypothesis/stateful.py:182: in runTest\r\n",
-      "    run_state_machine_as_test(state_machine_class)\r\n",
-      "\r\n",
-      ".venv/hypothesis/stateful.py:109: in run_state_machine_as_test\r\n",
-      "    breaker.run(state_machine_factory(), print_steps=True)\r\n",
-      "\r\n",
-      ".venv/hypothesis/stateful.py:237: in run\r\n",
-      "    state_machine.execute_step(value)\r\n",
-      "\r\n",
-      ".venv/hypothesis/stateful.py:512: in execute_step\r\n",
-      "    result = rule.function(self, **data)\r\n",
-      "\r\n",
-      "test_4_model_based_testing.py:131: in get\r\n",
-      "    assert actual == model\r\n",
-      "E   AssertionError: assert 0 == 1\r\n",
-      "\r\n",
-      "----------------------------- Hypothesis -----------------------------\r\n",
-      "\r\n",
-      "Step #1: new(max_size=2)\r\n",
-      "Step #2: put(item=0)\r\n",
-      "Step #3: put(item=1)\r\n",
-      "Step #4: get()\r\n",
-      "\r\n",
-      "======================== 23 tests deselected =========================\r\n",
-      "\r\n",
-      "1 failed, 23 deselected in 0.17 seconds\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_model_based_1 = QueueMachine.TestCase\n",
     "!sh pytest_run.sh test_model_based_1"
@@ -1229,57 +1300,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "F\r\n",
-      "\r\n",
-      "============================== FAILURES ==============================\r\n",
-      "\r\n",
-      "\r\n",
-      "_____________________ test_model_based_2.runTest _____________________\r\n",
-      "\r\n",
-      "\r\n",
-      ".venv/hypothesis/stateful.py:182: in runTest\r\n",
-      "    run_state_machine_as_test(state_machine_class)\r\n",
-      "\r\n",
-      ".venv/hypothesis/stateful.py:109: in run_state_machine_as_test\r\n",
-      "    breaker.run(state_machine_factory(), print_steps=True)\r\n",
-      "\r\n",
-      ".venv/hypothesis/stateful.py:237: in run\r\n",
-      "    state_machine.execute_step(value)\r\n",
-      "\r\n",
-      ".venv/hypothesis/stateful.py:512: in execute_step\r\n",
-      "    result = rule.function(self, **data)\r\n",
-      "\r\n",
-      "test_4_model_based_testing.py:137: in size\r\n",
-      "    assert actual == model\r\n",
-      "E   AssertionError: assert 0 == 2\r\n",
-      "\r\n",
-      "----------------------------- Hypothesis -----------------------------\r\n",
-      "\r\n",
-      "Step #1: new(max_size=1)\r\n",
-      "Step #2: put(item=0)\r\n",
-      "Step #3: put(item=0)\r\n",
-      "Step #4: size()\r\n",
-      "\r\n",
-      "======================== 23 tests deselected =========================\r\n",
-      "\r\n",
-      "1 failed, 23 deselected in 0.17 seconds\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_model_based_2 = QueueMachine2.TestCase\n",
     "!sh pytest_run.sh test_model_based_2"
@@ -1346,56 +1376,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "F\r\n",
-      "\r\n",
-      "============================== FAILURES ==============================\r\n",
-      "\r\n",
-      "\r\n",
-      "_____________________ test_model_based_3.runTest _____________________\r\n",
-      "\r\n",
-      "\r\n",
-      ".venv/hypothesis/stateful.py:182: in runTest\r\n",
-      "    run_state_machine_as_test(state_machine_class)\r\n",
-      "\r\n",
-      ".venv/hypothesis/stateful.py:109: in run_state_machine_as_test\r\n",
-      "    breaker.run(state_machine_factory(), print_steps=True)\r\n",
-      "\r\n",
-      ".venv/hypothesis/stateful.py:237: in run\r\n",
-      "    state_machine.execute_step(value)\r\n",
-      "\r\n",
-      ".venv/hypothesis/stateful.py:512: in execute_step\r\n",
-      "    result = rule.function(self, **data)\r\n",
-      "\r\n",
-      "test_4_model_based_testing.py:137: in size\r\n",
-      "    assert actual == model\r\n",
-      "E   AssertionError: assert 0 == 1\r\n",
-      "\r\n",
-      "----------------------------- Hypothesis -----------------------------\r\n",
-      "\r\n",
-      "Step #1: new(max_size=1)\r\n",
-      "Step #2: put(item=0)\r\n",
-      "Step #3: size()\r\n",
-      "\r\n",
-      "======================== 23 tests deselected =========================\r\n",
-      "\r\n",
-      "1 failed, 23 deselected in 0.15 seconds\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_model_based_3 = QueueMachine3.TestCase\n",
     "!sh pytest_run.sh test_model_based_3"
@@ -1441,28 +1431,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ".\r\n",
-      "\r\n",
-      "======================== 23 tests deselected =========================\r\n",
-      "\r\n",
-      "1 passed, 23 deselected in 0.28 seconds\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_model_based_4 = QueueMachine4.TestCase\n",
     "!sh pytest_run.sh test_model_based_4"
@@ -1477,7 +1455,9 @@
      "slide_type": "subslide"
     }
    },
-   "source": []
+   "source": [
+    "&nbsp;"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1533,29 +1513,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true,
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "$('#clear_all_output').click()"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%javascript\n",
     "$('#clear_all_output').click()"
@@ -1563,30 +1530,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true,
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<link href=\"https://fonts.googleapis.com/css?family=ABeeZee\" rel=\"stylesheet\">\n",
-       "<style>body { font-family: 'ABeeZee', serif !important; }</style>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%HTML\n",
     "<link href=\"https://fonts.googleapis.com/css?family=ABeeZee\" rel=\"stylesheet\">\n",
