added images to notebook and fixed incorrect pattern in pytest.ini

--- a/src/presentation.ipynb
+++ b/src/presentation.ipynb
@@ -209,7 +209,7 @@
    },
    "outputs": [],
    "source": [
-    "decode('h1e1l2o1')"
+    "decode('h1e1l4o1')"
    ]
   },
   {
@@ -586,71 +586,6 @@
     "deletable": true,
     "editable": true,
     "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "&nbsp;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "* Manual Testing"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "* Example Based Testing"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "*  Parameterized Tests"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "*  Property Based Tests"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true,
-    "slideshow": {
      "slide_type": "slide"
     }
    },
@@ -908,110 +843,6 @@
    "outputs": [],
    "source": [
     "!sh pytest.sh check_property_two_heads_are_better_than_one"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true,
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "&nbsp;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "* No errors"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "* Function pairs"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "* Commutivity"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "* Inverse"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "* Invariants"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "* Idempotency"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "* Model"
    ]
   },
   {
@@ -1650,7 +1481,7 @@
     "deletable": true,
     "editable": true,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -1663,11 +1494,11 @@
     "deletable": true,
     "editable": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "source": [
-    "* Automatic testing of stateful systems"
+    "![property based testing](pbt.jpg)"
    ]
   },
   {
@@ -1676,11 +1507,11 @@
     "deletable": true,
     "editable": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "source": [
-    "* Interpreting Errors"
+    "![signal](signal.jpg)"
    ]
   },
   {
@@ -1689,11 +1520,11 @@
     "deletable": true,
     "editable": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "source": [
-    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• Specification"
+    "![patterns](patterns.jpg)"
    ]
   },
   {
@@ -1702,11 +1533,11 @@
     "deletable": true,
     "editable": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "source": [
-    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• Model"
+    "![datagen](datagen.jpg)"
    ]
   },
   {
@@ -1715,11 +1546,11 @@
     "deletable": true,
     "editable": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "source": [
-    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• System under test"
+    "![stateful](stateful.jpg)"
    ]
   },
   {
@@ -1728,7 +1559,7 @@
     "deletable": true,
     "editable": true,
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -1762,47 +1593,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true,
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "# Shrinking - Extract signal from noise"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true,
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "# Look for property patterns"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true,
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "# Stateful testing - Auto integration tests"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1832,7 +1624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false,
     "deletable": true,
