skip TextWithIsins slides

--- a/src/presentation.ipynb
+++ b/src/presentation.ipynb
@@ -1514,7 +1514,7 @@
     "editable": true,
     "scrolled": false,
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "skip"
     }
    },
    "outputs": [],
